--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,5 @@
     <string name="image_eight">https://clck.ru/ga7ZE</string>
     <string name="image_nine">https://clck.ru/ga7aD</string>
     <string name="image_ten">https://clck.ru/ga7b4</string>
-    //fdsfsd
+    //fdsfsdjhgfhjkl
 </resources>
